# SelfDrivingCar-using-C

./: .gitignore  .gitmodules  CMakeLists.txt  README
include/: context.h  core.h  dummy.h  physicsBody.h  radar.h  simulation.h  world.h
include/ai/: AI.h  genome.h
src/: CMakeLists.txt  context.c  dummy.c  main.c  physicsBody.c  radar.c  simulation.c  world.c
src/ai/: AI.c  CMakeLists.txt  genome.c
tests/: test.c
